# smpl-apps

./: CHANGELOG.md  Cargo.toml  README.md  check.sh  deploy-local.sh  setup-hooks.sh
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
app-center/src/: main.rs
app-center/ui/: main.slint
calendar/src/: main.rs
calendar/ui/: main.slint
notif-center/ui/: main.slint
settings/: Cargo.toml
settings/src/: keybindings.rs  layouts.rs  main.rs  startup.rs  taskbar.rs
settings/src/bluetooth/: ctl.rs  mod.rs
settings/src/display/: hyprland.rs  monitor.rs
settings/src/wifi/: mod.rs  nmcli.rs  qr.rs  secure.rs
settings/ui/: main.slint
smpl-common/: Cargo.toml
smpl-common/src/: keybindings.rs  launch_options.rs  lib.rs
start-menu/src/: main.rs
start-menu/ui/: main.slint
sync-center/: Cargo.toml
sync-center/src/: conflict.rs  notification.rs
sync-center/ui/: main.slint
webapp-center/src/: backend.rs  main.rs
webapp-center/ui/: main.slint
